--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,8 @@ spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
+spring.servlet.multipart.max-file-size = 3MB
+spring.servlet.multipart.max-request-size = 3MB
 server.port=8083
+!--instruccion para poder bajar una foto de la basde de datos a postman, sin la instruccion da error
+spring.jackson.serialization.fail-on-empty-beans=false
